deployments/books-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-manager-service
  labels:
    app: book-manager
spec:
  type: LoadBalancer
  selector:
    app: book-manager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30011
